src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwU-dhU-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: U\ndefault window height: U\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1239 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1 × 688, bounds: 1239 × 688, states: [Activated]
